# TekVwarho-ProAudit

./: .dockerignore  .env.example  .gitignore  BUILD_PROGRESS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  alembic.ini  cliff.toml  docker-compose.yml  main.py  pyproject.toml  railway.json  requirements.txt  test_checkout_debug.py
.github/: CODEOWNERS  dependabot.yml  labeler.yml  pull_request_template.md
alembic/: env.py
app/: __init__.py  celery_app.py  config.py  database.py  dependencies.py
docs/: ADVANCED_ACCOUNTING_MODULE.md  AUDIT_REPORT.md  AUDIT_SYSTEM_DOCUMENTATION.md  BANK_RECONCILIATION_DOCUMENTATION.md  BILLING_RUNBOOK.md  BUDGET_MODULE_DOCUMENTATION.md  BUSINESS_CASE.md  BUSINESS_INTELLIGENCE_DOCUMENTATION.md  COMMERCIAL_SKU_STRUCTURE.md  COMPLETE_ACCOUNTING_SYSTEM.md  COMPLIANCE_REQUIREMENTS.md  CONSOLIDATION_GUIDE.md  DATA_MODEL_ERD.md  DATA_RETENTION_POLICY.md  DEMO_COMPANIES.md  EFE_OBUS_FURNITURE_COMPANY.md  FX_API_DOCUMENTATION.md  LEDGER_FLOW.md  MARKET_COMPETITOR_ANALYSIS.md  MIGRATION_GUIDE.md  PAYMENT_MODULE_DOCUMENTATION.md  PAYROLL_SYSTEM_DOCUMENTATION.md  RBAC_DOCUMENTATION.md  RECOMMENDATIONS.md  ROADMAP.md  SECURITY_ARCHITECTURE.md  SKU_AUDIT_REPORT_2026-01-29.md  SUPER_ADMIN_DASHBOARD_DOCUMENTATION.md  SUPER_ADMIN_IMPLEMENTATION_ROADMAP.md  SYSTEM_AUDIT_REPORT.md  SYSTEM_CONNECTIONS.md  TECHNICAL_ARCHITECTURE.md  TEST_REPORT_5_FEATURES.md  UI_UX_RESEARCH.md  USE_CASES.md  WORLD_CLASS_AUDIT_DOCUMENTATION.md
ml_models/: transaction_classifier.pkl
scripts/: add_audit_columns.py  add_missing_payment_columns.py  add_transaction_fx_columns.py  audit_super_admin.py  check_benfords_data.py  check_db.py  check_sku_enums.py  check_user_login.py  create_accounting_tables.py  create_efe_obus_org.py  (+46 more)
(+416 files in other folders)
