[project]
name = "tekvwarho-proaudit"
version = "0.1.0"
description = "Nigeria's Premier Tax Compliance & Business Management Platform"
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.11"
authors = [
    {name = "Tekvwarho LTD", email = "dev@tekvwarho.com"}
]
keywords = ["tax", "compliance", "nigeria", "fastapi", "accounting"]

dependencies = [
    # Web Framework
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    
    # Database
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.1",
    
    # Authentication
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    
    # Validation
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "email-validator>=2.1.0",
    
    # Templates
    "jinja2>=3.1.3",
    
    # HTTP Client
    "httpx>=0.26.0",
    
    # Task Queue
    "celery>=5.3.6",
    "redis>=5.0.1",
    
    # PDF Generation
    "weasyprint>=60.2",
    "reportlab>=4.0.8",
    
    # QR Code
    "qrcode[pil]>=7.4.2",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "pytz>=2023.3.post1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "black>=23.12.1",
    "isort>=5.13.2",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
